--- a/css/common.css
+++ b/css/common.css
@@ -1,26 +1,17 @@
-@import url(reset.css);
-
-body{
-    background-color: #fff;
-    /* font-family: 'M PLUS Rounded 1c', sans-serif; */
-    /* font-family: 'Noto Sans TC', sans-serif; */
-    font-family: 'Public Sans', sans-serif;
-    
-    
-}
-
-
 /* --------- header top --------- */
+/* 
+
 header{
     margin: auto;
     width: 100%;
-    height: 650px;
-    background-image: url("../IMG/lift_fee/top_bg.jpg");
+    height: 1000px;
+    
     background-repeat:no-repeat;
     background-size: cover;
     background-position: top center;
 
     position: relative;
+
     overflow: hidden;
 }
 .header-top{
@@ -28,8 +19,7 @@ header{
     background-color:#19297C;
     
     position: relative;
-    
-    
+     
 }
 
 .header-top:before{
@@ -45,13 +35,12 @@ header{
     width: 1366px;
     margin: auto;
     display: flex;
-    
+
     position: absolute;
     top: 0;
     right: 0;
     left: 0;
     margin: auto;
-    
 }
 
 
@@ -61,7 +50,7 @@ header{
     background-color: #fff;
     display: block;
     clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
-    
+
 }
 
 .header-menu .logo img{
@@ -76,25 +65,7 @@ header{
     margin-left: auto;
     width: 800px;
     height: 75px;
-    
-    position: relative;
 }
-
-.header-menu ul::before{
-    content: 'LIFT FEE';
-    color: #fff;
-    font-size: 64px;
-    font-weight: bold;
-
-
-
-    position: absolute;
-    bottom: -520px;
-    left: -500px;
-    z-index: 99;
-}
-
-
 
 .header-menu li{
     flex-grow: 1;
@@ -128,20 +99,24 @@ header{
 
 .header-menu li a:hover{
     color: yellow;
-}
+}   */
+
 
 /* --------- header bottom --------- */
 
-
+/* 
 .header-bottom{
     position: absolute;
-    bottom: 0;
+    bottom: -10px;
     right: 0;
     left: 0;
     margin: auto;
     
     clip-path: polygon(0 20%, 100% 70%, 100% 100%, 0% 100%);
+
+    
 }
+
 
 .header-bottom img{
     display: block;
@@ -150,69 +125,94 @@ header{
     margin: auto;
 }
 
+ */
 
-/* -------------- main btn -------------- */ 
-.main-bg{
-    height: 1000px;
-    background-image: url("../IMG/lift_fee/main-bg.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    box-sizing: border-box;
-    padding-top: 200px;
-    /* overflow: hidden; */
+
+
+
+/* --------- footer --------- */
+
+footer{
+    height: 400px;
+    background-color: #19297C;
 }
 
-.fee{
-    width: 1200px;
-    height: 700px;
-    background-color: rgb(255, 255, 255, 50%);
+.footer{
+    width: 1366px;
     margin: auto;
+
+    display: flex;
+}
+
+.footer-logo{
+    height: 400px;
+    flex-grow: 1;
+}
+
+.footer-logo img{
+    width: 200px;
+    display: block;
+    margin: 110px auto;
+}
+
+.footer-info{
+    flex-grow: 5;
+    display: flex;
 
     position: relative;
 }
 
-.fee ul{
-    display: flex;    
+.footer-info::before{
+    content: '';
+    display: block;
+    width: 950px;
+    height: 2px;
+    background-color: #fff;
 
     position: absolute;
-    top: -60px;
-    left: 60px;
+    bottom: 120px;
+    left: 100px;
 }
 
-.fee .btn{
-    width: 270px;
-    height: 120px;
+.footer-info::after{
+    content: '本網站為緯育TibaMe前端設計工程師班第76期學員專題作品，本平台僅供學習、展示之用。';
+    display: block;
+    width: 950px;
+    color: #fff;
+    text-align: center;
+
+    position: absolute;
+    bottom: 70px;
+    left: 100px;
+}
+
+.footer-info .info-access{
+    color: #fff;
+    height: 150px;
+    font-size: 24px;
+    line-height: 2;
+    margin: 100px 0 0 100px;
+    
+    flex-grow: 2;
+}
+
+.footer-info .info-sns{
+    width: 300px;
+    height: 50px;
+    display: flex;
+
+    position: absolute;
+    bottom: 140px;
+    right: 30px;
+}
+
+.footer-info .info-sns a{
+    width: 50px;
+    height: 50px;
+    display: block;
     margin: auto;
 }
 
-.fee .btn a{
-    color: #fff;
-    text-decoration: none;
-    background-color: #19297C;
-    display: block;
-    width: 270px;
-    height: 120px;
-    
-    clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
+.footer-info .info-sns img{
+    width: 50px;
 }
-
-.fee .btn a span{
-    display: block;
-    height: 60px;
-    font-size: 24px;
-    text-align: center;
-    line-height: 60px;
-}
-
-
-/* -------------- form -------------- */ 
-
-.form img{
-    border: 3px solid red;
-    width: 1000px;
-    height: 540px;
-    margin-top: 110px;
-    margin-left: 100px;
-}
-
-
