--- a/css/school.css
+++ b/css/school.css
@@ -14,6 +14,7 @@ header{
     width: 100%;
     height: 650px;
     background-image: url("../IMG/school/top_bg.jpg");
+    /* background-attachment: fixed; */
     background-repeat:no-repeat;
     background-size: cover;
     background-position: top center;
@@ -248,14 +249,40 @@ header{
 }
 
 .lesson .lesson-fee{
-    /* border: 1px solid orange; */
     width: 1000px;
-    height: 250px;
+    height: 240px;
     margin: auto;
 }
 
-.lesson .lesson-fee img{
-    width: 100%; 
+.lesson-fee table{
+    border-collapse: separate;
+    width: 100%;
+    height: 100%;
+}
+
+.lesson-fee table th{
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 60px;
+    background-color: rgba(212, 156, 103, 90%);
+    border: 1px solid black;
+}
+
+.lesson-fee table .fee-time{
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 60px;
+    background-color: rgba(212, 156, 103, 90%);
+}
+
+.lesson-fee table td{
+    font-size: 20px;
+    text-align: center;
+    line-height: 60px;
+    background-color: rgb(255, 255, 255,90%);
+    border: 1px solid black;
 }
 
 .lesson .lesson-notice{
@@ -274,8 +301,13 @@ header{
     width: 300px;
 }
 
-.lesson .lesson-notice p{
-    font-size: 24px;
-    line-height: 1.6;
+.lesson .lesson-notice ul{
+    padding-left: 30px;
 }
 
+.lesson .lesson-notice li{
+    font-size: 24px;
+    line-height: 1.6;
+    list-style-type:disc;
+    padding-bottom: 10px;
+}
