--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,6 @@
-
-
 /* --------- footer --------- */
 
 footer{
-    height: 400px;
     background-color: #19297C;
 }
 
@@ -85,4 +82,71 @@ footer{
 
 .footer-info .info-sns img{
     width: 50px;
+}
+
+
+
+
+/* --------------- RWD --------------- */
+
+
+@media screen and (max-width:428px) {
+    .footer{
+        width: auto;
+        display: block;
+    }
+
+    .footer-logo{
+        height: 150px;
+        width: 200px;
+        overflow: hidden;
+    }
+
+    .footer-logo img{
+        margin: 30px;
+        width: 100px;
+    }
+
+    .footer-info .info-access{
+        height: 100px;
+        font-size: 12px;
+        margin: 0px auto 100px;
+        text-align: center;
+    }
+    
+    .footer-info::before{
+        width: 200px;
+        height: 1px;
+    
+        bottom: 60px;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+
+    .footer-info::after{
+        width: 250px;
+        font-size: 12px;
+
+        bottom: 20px;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+    
+    .footer-info .info-sns{
+        width: 200px;
+        height: 30px;
+        text-align: center;
+    
+        bottom: 70px;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+
+    .footer-info .info-sns img{
+        width: 20px;
+    }
+       
 }
