--- a/css/header_test.css
+++ b/css/header_test.css
@@ -1,12 +1,8 @@
 @import url(reset.css);
 
 body{
-    background-color: #fff;
-    /* font-family: 'M PLUS Rounded 1c', sans-serif; */
-    /* font-family: 'Noto Sans TC', sans-serif; */
-    font-family: 'Public Sans', sans-serif;
+    background-color: #c5c5c5;
 }
-
 
 /* --------- header top --------- */
 
@@ -81,7 +77,7 @@ header{
 }
 
 .header-menu ul::before{
-    content: 'ACCESS';
+    content: 'TEST';
     color: #fff;
     font-size: 64px;
     font-weight: bold;
@@ -151,74 +147,4 @@ header{
     right: 0;
     left: 0;
     margin: auto;
-}
-
-
-/* <!-- ---------------- map ------------------ --> */
-
-iframe{
-    width: 1366px;
-    display: block;
-    margin: 100px auto;
-}
-
-/* <!-- ---------------- trans ------------------ --> */
-
-.trans{
-    width: 1200px;
-    height: 400px;
-    margin: auto;
-    margin-bottom: 150px;
-    display: flex;
-
-    position: relative;
-}
-
-.trans::after{
-    content: '';
-    display: block;
-    width: 1000px;
-    height: 60px;
-    background-color:#19297C;
-
-    position: absolute;
-    bottom: -30px;
-    z-index: -1;
-    
-    clip-path: polygon(0 0, 97% 0, 100% 100%, 0% 100%);
-}
-
-.trans img{
-    flex-basis: 400px;
-}
-
-.trans .info{
-    height: 350px;
-    width: 500px;
-    margin-left: 50px;
-}
-
-.trans .info h3{
-    font-size: 40px;
-    padding: 20px 0 50px 40px;
-
-    position: relative;
-}
-
-.trans .info h3::before{
-    content: '';
-    display: block;
-    width: 10px;
-    height: 40px;
-    background-color: #FFB630;
-
-    position: absolute;
-    left: 10px;
-}
-
-
-.trans .info p{
-    font-size: 24px;
-    line-height: 1.6;
-    align-self: center;
 }
