--- a/css/index.css
+++ b/css/index.css
@@ -210,14 +210,22 @@ header{
 
 .main{
     width: 1366px;
-    /* width: auto; */
     margin: auto;
-
+    border: 1px solid red;
 }
+/* 
+@media screen and (max-width:428px) {
+    .main{
+        width: 400px;
+    }   
+    
+} */
+
 
 .main-btn ul{
     display: flex;
     margin-top: 100px;
+
     /* flex-wrap: wrap; */
 }
 
@@ -516,13 +524,10 @@ header{
 
 
 
-
-
-
 /* --------------- RWD --------------- */
 
-
-@media screen and (max-width:414px) {
+/* 
+@media screen and (max-width:428px) {
     
     
-}
+} */
