--- a/css/access.css
+++ b/css/access.css
@@ -28,8 +28,6 @@ header{
     background-color:#19297C;
     
     position: relative;
-    
-    
 }
 
 .header-top:before{
@@ -39,7 +37,6 @@ header{
     background-color: rgb(25, 41, 124, 50%);
     clip-path: polygon(0 0, 100% 0, 100% 70%, 0% 100%); 
 }
-
 
 .header-menu{
     width: 1366px;
@@ -51,9 +48,7 @@ header{
     right: 0;
     left: 0;
     margin: auto;
-    
 }
-
 
 .header-menu .logo{
     width: 200px;
@@ -61,7 +56,6 @@ header{
     background-color: #fff;
     display: block;
     clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
-    
 }
 
 .header-menu .logo img{
@@ -86,15 +80,11 @@ header{
     font-size: 64px;
     font-weight: bold;
 
-
-
     position: absolute;
     bottom: -520px;
     left: -500px;
     z-index: 99;
 }
-
-
 
 .header-menu li{
     flex-grow: 1;
@@ -130,6 +120,39 @@ header{
     color: #FFB630;
 }
 
+/* <!-- ----------- hambur ----------------- -- */
+
+.hambur{
+    display: none;
+}
+
+.bar{
+    display: block;
+    width: 40px;
+    height: 5px;
+    background-color: #FFB630;
+    margin-bottom: 8px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.hambur.active .bar{
+    opacity: .8;
+}
+
+.hambur.active .bar:nth-child(1) {
+    width: 20px;
+    transform: translateX(40px);
+}
+
+.hambur.active .bar:nth-child(2) {
+    transform: translateX(20px); 
+}
+
+.hambur.active .bar:nth-child(3) {
+    width: 60px;
+}
+
 /* --------- header bottom --------- */
 
 
@@ -157,7 +180,7 @@ header{
 /* <!-- ---------------- map ------------------ --> */
 
 iframe{
-    width: 1366px;
+    width: 1200px;
     display: block;
     margin: 100px auto;
 }
