--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,6 @@ body{
 
 /* --------- header top --------- */
 
-
 header{
     margin: auto;
     width: 100%;
@@ -29,7 +28,6 @@ header{
     background-color:#19297C;
     
     position: relative;
-     
 }
 
 .header-top:before{
@@ -39,7 +37,6 @@ header{
     background-color: rgb(25, 41, 124, 50%);
     clip-path: polygon(0 0, 100% 0, 100% 70%, 0% 100%); 
 }
-
 
 .header-menu{
     width: 1366px;
@@ -53,14 +50,12 @@ header{
     margin: auto;
 }
 
-
 .header-menu .logo{
     width: 200px;
     height: 250px;
     background-color: #fff;
     display: block;
     clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
-
 }
 
 .header-menu .logo img{
@@ -75,6 +70,8 @@ header{
     margin-left: auto;
     width: 800px;
     height: 75px;
+
+    position: relative;
 }
 
 .header-menu li{
@@ -111,6 +108,39 @@ header{
     color: #FFB630;
 }  
 
+/* <!-- ----------- hambur ----------------- -- */
+
+.hambur{
+    display: none;
+}
+
+.bar{
+    display: block;
+    width: 40px;
+    height: 5px;
+    background-color: #FFB630;
+    margin-bottom: 8px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.hambur.active .bar{
+    opacity: .8;
+}
+
+.hambur.active .bar:nth-child(1) {
+    width: 20px;
+    transform: translateX(40px);
+}
+
+.hambur.active .bar:nth-child(2) {
+    transform: translateX(20px); 
+}
+
+.hambur.active .bar:nth-child(3) {
+    width: 60px;
+}
+
 
 /* --------- header report --------- */
 
@@ -126,7 +156,6 @@ header{
     z-index: 99;
     
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 93%);
-    
 }
 
 
@@ -211,16 +240,7 @@ header{
 .main{
     width: 1366px;
     margin: auto;
-    border: 1px solid red;
 }
-/* 
-@media screen and (max-width:428px) {
-    .main{
-        width: 400px;
-    }   
-    
-} */
-
 
 .main-btn ul{
     display: flex;
@@ -374,7 +394,6 @@ header{
     left: 20px;
 }
 
-
 .news-block a:hover{
     background-color: #FFB630;
 }
@@ -387,7 +406,6 @@ header{
     border-bottom: 2px solid #19297C;
     width: 100px;
 }
-
 
 
 /* --------- about --------- */
@@ -519,15 +537,3 @@ header{
     bottom: 60px;
 
 }
-
-
-
-
-
-/* --------------- RWD --------------- */
-
-/* 
-@media screen and (max-width:428px) {
-    
-    
-} */
