--- a/css/access_RWD.css
+++ b/css/access_RWD.css
@@ -1,30 +1,23 @@
-
-@media screen and (max-width:428px){
-
+@media screen and (max-width:414px){
 
 
+    /* ----------- RWD_header bg ----------- */
 
-
-
-
-
+    header{
+        background-position: 30%;
+    }
 
 
 
+    /* ----------- RWD_map ----------- */
 
-
-
-
-
-
-
-
-    /* <!-- -------------- map 428 ------------ --> */
     iframe{
         width: 350px;
         height: 200px;
     }
-    /* <!-- ------------- trans 428 ------------ --> */
+    
+    /* ----------- RWD_trans ----------- */
+
     .trans{
         width: 350px;
         display: block;
