--- a/css/lift_fee.css
+++ b/css/lift_fee.css
@@ -5,8 +5,6 @@ body{
     /* font-family: 'M PLUS Rounded 1c', sans-serif; */
     /* font-family: 'Noto Sans TC', sans-serif; */
     font-family: 'Public Sans', sans-serif;
-    
-    
 }
 
 
@@ -23,13 +21,12 @@ header{
     position: relative;
     overflow: hidden;
 }
+
 .header-top{
     height: 75px;
     background-color:#19297C;
     
     position: relative;
-    
-    
 }
 
 .header-top:before{
@@ -39,7 +36,6 @@ header{
     background-color: rgb(25, 41, 124, 50%);
     clip-path: polygon(0 0, 100% 0, 100% 70%, 0% 100%); 
 }
-
 
 .header-menu{
     width: 1366px;
@@ -51,17 +47,14 @@ header{
     right: 0;
     left: 0;
     margin: auto;
-    
 }
-
 
 .header-menu .logo{
     width: 200px;
     height: 250px;
     background-color: #fff;
     display: block;
-    clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
-    
+    clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);   
 }
 
 .header-menu .logo img{
@@ -86,15 +79,11 @@ header{
     font-size: 64px;
     font-weight: bold;
 
-
-
     position: absolute;
     bottom: -520px;
     left: -500px;
     z-index: 99;
 }
-
-
 
 .header-menu li{
     flex-grow: 1;
@@ -128,6 +117,39 @@ header{
 
 .header-menu li a:hover{
     color: #FFB630;
+}
+
+/* <!-- ----------- hambur ----------------- -- */
+
+.hambur{
+    display: none;
+}
+
+.bar{
+    display: block;
+    width: 40px;
+    height: 5px;
+    background-color: #FFB630;
+    margin-bottom: 8px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.hambur.active .bar{
+    opacity: .8;
+}
+
+.hambur.active .bar:nth-child(1) {
+    width: 20px;
+    transform: translateX(40px);
+}
+
+.hambur.active .bar:nth-child(2) {
+    transform: translateX(20px); 
+}
+
+.hambur.active .bar:nth-child(3) {
+    width: 60px;
 }
 
 /* --------- header bottom --------- */
@@ -204,7 +226,6 @@ header{
     font-weight: bold;
 }
 
-
 .fee .btn a span{
     display: block;
     height: 60px;
@@ -218,7 +239,7 @@ header{
 
 .form img{
     width: 930px;
-    height: 460px;
+    /* height: 460px; */
     
     display: block;
     margin: auto;
