--- a/css/school.css
+++ b/css/school.css
@@ -9,6 +9,7 @@ body{
 
 
 /* --------- header top --------- */
+
 header{
     margin: auto;
     width: 100%;
@@ -22,13 +23,12 @@ header{
     position: relative;
     overflow: hidden;
 }
+
 .header-top{
     height: 75px;
     background-color:#19297C;
     
-    position: relative;
-    
-    
+    position: relative;    
 }
 
 .header-top:before{
@@ -39,7 +39,6 @@ header{
     clip-path: polygon(0 0, 100% 0, 100% 70%, 0% 100%); 
 }
 
-
 .header-menu{
     width: 1366px;
     margin: auto;
@@ -49,18 +48,15 @@ header{
     top: 0;
     right: 0;
     left: 0;
-    margin: auto;
-    
+    margin: auto;    
 }
-
 
 .header-menu .logo{
     width: 200px;
     height: 250px;
     background-color: #fff;
     display: block;
-    clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
-    
+    clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);   
 }
 
 .header-menu .logo img{
@@ -85,15 +81,11 @@ header{
     font-size: 64px;
     font-weight: bold;
 
-
-
     position: absolute;
     bottom: -520px;
     left: -500px;
     z-index: 99;
 }
-
-
 
 .header-menu li{
     flex-grow: 1;
@@ -129,8 +121,40 @@ header{
     color: #FFB630;
 }
 
-/* --------- header bottom --------- */
+/* <!-- ----------- hambur ----------------- -- */
 
+.hambur{
+    display: none;
+}
+
+.bar{
+    display: block;
+    width: 40px;
+    height: 5px;
+    background-color: #FFB630;
+    margin-bottom: 8px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.hambur.active .bar{
+    opacity: .8;
+}
+
+.hambur.active .bar:nth-child(1) {
+    width: 20px;
+    transform: translateX(40px);
+}
+
+.hambur.active .bar:nth-child(2) {
+    transform: translateX(20px); 
+}
+
+.hambur.active .bar:nth-child(3) {
+    width: 60px;
+}
+
+/* --------- header bottom --------- */
 
 .header-bottom{
     position: absolute;
@@ -142,14 +166,12 @@ header{
     clip-path: polygon(0 20%, 100% 70%, 100% 100%, 0% 100%);
 }
 
-
 .header-bottom img{
     display: block;
     right: 0;
     left: 0;
     margin: auto;
 }
-
 
 /* ---------------- intro ---------------- */
 
@@ -248,6 +270,8 @@ header{
     padding-top: 350px; 
 }
 
+/* ---------------- lesson table ---------------- */
+
 .lesson .lesson-fee{
     width: 1000px;
     height: 240px;
@@ -284,6 +308,8 @@ header{
     background-color: rgb(255, 255, 255,90%);
     border: 1px solid black;
 }
+
+/* ---------------- lesson notice ---------------- */
 
 .lesson .lesson-notice{
     width: 1000px;
